# TrafficCop

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  sugar.yaml  todo.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yaml
benches/: proxy_benchmark.rs
config/: example.yaml  test.yaml
src/: lib.rs  main.rs  single_instance.rs
src/admin/: api.rs  mod.rs  server.rs
src/balancer/: least_conn.rs  mod.rs  random.rs  round_robin.rs  sticky.rs  weighted.rs
src/cluster/: manager.rs  mod.rs  provider.rs
src/config/: duration.rs  mod.rs  types.rs  watcher.rs
src/health/: checker.rs  circuit_breaker.rs  distributed.rs  mod.rs  passive.rs
src/metrics/: mod.rs
src/middleware/: chain.rs  mod.rs  registry.rs
src/middleware/builtin/: access_log.rs  basic_auth.rs  buffering.rs  chain.rs  compress.rs  cors.rs  digest_auth.rs  errors.rs  forward_auth.rs  grpc_web.rs  headers.rs  ip_filter.rs  jwt.rs  mod.rs  path.rs  rate_limit.rs  redirect_scheme.rs  retry.rs
src/pool/: connection.rs  mod.rs
src/proxy/: grpc.rs  handler.rs  http2_client.rs  mod.rs  tls_client.rs  websocket.rs
src/router/: matcher.rs  mod.rs  rule.rs
src/server/: listener.rs  mod.rs  udp_listener.rs
src/service/: failover.rs  manager.rs  mirroring.rs  mod.rs  weighted.rs
src/store/: local.rs  mod.rs  valkey.rs
src/tcp/: mod.rs  proxy.rs  router.rs  service.rs
src/telemetry/: mod.rs  propagation.rs  span.rs
src/tls/: mod.rs  mtls.rs  resolver.rs
src/tls/acme/: challenge.rs  client.rs  manager.rs  mod.rs  storage.rs
src/udp/: mod.rs  proxy.rs  router.rs  service.rs
