[package]
name = "traffic_management"
version = "0.10.0"
edition = "2021"
description = "High-performance reverse proxy and load balancer"
license = "MIT"
repository = "https://github.com/yourusername/traffic_management"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
ring = "0.17"
base64 = "0.22"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Concurrency
dashmap = "6"
arc-swap = "1"
parking_lot = "0.12"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IP networking
ipnetwork = "0.21"

# Utilities
thiserror = "2"
anyhow = "1"
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
notify = "7"
regex = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
sha1_smol = "1"

# Compression
flate2 = "1"
brotli = "7"
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client for ACME and config fetching
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Redis/Valkey client (async, multiplexed connections)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "script"] }

# Hostname for node identification
hostname = "0.4"

# Async traits
async-trait = "0.1"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "proxy_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
